--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 </head>
 
 <body>
+<video autoplay muted loop playsinline class="video-fondo">
+  <source src="fotos/video.logo.mp4" type="video/mp4">
+  Tu navegador no soporta videos.
+</video>
+
+
     <header>
         <nav class="dev-menu-principal">
             <div class="menu-logo">
@@ -34,7 +40,7 @@
                             <img src="fotos/github.png" alt="GitHub de Nahuel">
                         </a>
                         <a href="https://linkedin.com/in/tu-usuario" target="_blank">
-                            <img src="fotos/social1.png" alt="LinkedIn">
+                            <img src="fotos/social.png" alt="LinkedIn">
                         </a>
                         <a href="https://instagram.com/tu-usuario" target="_blank">
                             <img src="fotos/instagram.png" alt="Instagram de Nahuel">
@@ -53,7 +59,8 @@
         <!-- HERO CON VIDEO DE FONDO -->
         <div class="hero">
             <video autoplay muted loop playsinline>
-                <source src="fotos/video.logo.mp4" type="video/mp4">
+                 <source src="fotos/video.logo.mp4" type="video/mp4">
+                 
                 Tu navegador no soporta videos.
             </video>
             <div class="hero-content">
