--- a/uses.html
+++ b/uses.html
@@ -10,7 +10,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<video autoplay muted loop playsinline class="video-fondo">
+  <source src="fotos/video.logo.mp4" type="video/mp4">
+  Tu navegador no soporta videos.
+</video>
    <header>
         <nav class="dev-menu-principal">
             <div class="menu-logo">
