Solución completa: ajustes en el menú móvil y visibilidad del video de fondo

--- a/articulos.html
+++ b/articulos.html
@@ -4,56 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog de Nahuel Figueredo - Desarrollo Full-Stack</title>
+    <meta name="description" content="Blog de Nahuel Figueredo - Desarrollo Full-Stack. Proyectos, artículos, tutoriales y experiencias como desarrollador.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css?v=1.4">
 </head>
+
 <body>
-<video autoplay muted loop playsinline class="video-fondo">
-  <source src="fotos/video.logo.mp4" type="video/mp4">
-  Tu navegador no soporta videos.
+    <video autoplay muted loop id="video-fondo">
+    <source src="fotos/video.logo.mp4" type="video/mp4">
+    <source src="fotos/video.logo.mp4" type="video/webm">
+    Tu navegador no soporta el tag de video.
 </video>
-   <header>
+    <header>
+ 
+
         <nav class="dev-menu-principal">
             <div class="menu-logo">
                 <a href="index.html">
-                    <img src="fotos/logo1.png" alt="Logo de Full Stack Developer Blog">
+                    <img src="fotos/logo1.png" alt="Logo del Blog Full-Stack de Nahuel">
                 </a>
             </div>
-           <div class="menu-contenido">
-    <ul class="menu-fila-superior">
-        <li><a href="proyectos.html">Proyectos</a></li>
-        <li><a href="articulos.html">Artículos</a></li>
-        <li><a href="tutoriales.html">Tutoriales</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-    </ul>
-    <ul class="menu-fila-inferior">
-        <li><a href="sobre-mi.html">Sobre Mí</a></li>
-        <li><a href="uses.html">/uses</a></li>
-        <li class="redes-sociales">
-            <a href="https://github.com/tu-usuario" target="_blank">
-                <img src="fotos/github.png" alt="GitHub">
-            </a>
-            <a href="https://linkedin.com/in/tu-usuario" target="_blank">
-                <img src="fotos/social.png" alt="LinkedIn">
-            </a>
-            <a href="https://instagram.com/tu-usuario" target="_blank">
-                <img src="fotos/instagram.png" alt="Instagram">
-            </a>
-            <a href="mailto:tu-correo@gmail.com" target="_blank">
-                <img src="fotos/gmail.png" alt="Gmail">
-            </a>
-            <a href="https://youtube.com/tu-usuario" target="_blank">
-                <img src="fotos/youtube.png" alt="YouTube">
-            </a>
-        </li>
-    </ul>
-</div>
+            <div class="menu-contenido">
+                <ul class="menu-fila-superior">
+                    <li><a href="proyectos.html">Proyectos</a></li>
+                    <li><a href="articulos.html">Artículos</a></li>
+                    <li><a href="tutoriales.html">Tutoriales</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+                <ul class="menu-fila-inferior">
+                    <li><a href="sobre-mi.html">Sobre Mí</a></li>
+                    <li><a href="uses.html">/uses</a></li>
+                    <li class="redes-sociales">    
+                        <a href="https://github.com/nahuelfigueredo" target="_blank">
+                            <img src="fotos/github.png" alt="GitHub de Nahuel">
+                        </a>
+                        <a href="https://linkedin.com/in/tu-usuario" target="_blank">
+                            <img src="fotos/social.png" alt="LinkedIn">
+                        </a>
+                        <a href="https://instagram.com/tu-usuario" target="_blank">
+                            <img src="fotos/instagram.png" alt="Instagram de Nahuel">
+                        </a>
+                        <a href="mailto:tu-correo@gmail.com" target="_blank">
+                            <img src="fotos/gmail.png" alt="Correo de Nahuel">
+                        </a>
+                        <a href="https://youtube.com/tu-usuario" target="_blank">
+                            <img src="fotos/youtube.png" alt="YouTube de Nahuel">
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </nav>
-        
-        <h1>Mi Viaje Full-Stack</h1>
-        <p>Un espacio para documentar mis proyectos, explorar nuevas tecnologías y compartir mi experiencia en el desarrollo.</p>
+
+
+
+        <!-- HERO -->
+        <div class="hero-content">
+            <h1>Mi Viaje Full-Stack</h1>
+            <p>Un espacio para documentar mis proyectos, explorar nuevas tecnologías y compartir mi experiencia en el desarrollo.</p>
+        </div>
     </header>
 
 
