Solución definitiva: Subir todos los archivos y corregir el video de fondo

--- a/index.html
+++ b/index.html
@@ -23,42 +23,52 @@
  </header>
  
 
-        <nav class="dev-menu-principal">
-            <div class="menu-logo">
-                <a href="index.html">
-                    <img src="fotos/logo1.png" alt="Logo del Blog Full-Stack de Nahuel">
+       <nav class="dev-menu-principal">
+    <div class="menu-izquierda">
+        <a href="index.html" class="menu-logo">
+            <img src="fotos/logo1.png" alt="Logo del Blog Full-Stack de Nahuel">
+        </a>
+        <ul class="menu-links">
+            <li><a href="proyectos.html">Proyectos</a></li>
+            <li><a href="articulos.html">Artículos</a></li>
+            <li><a href="tutoriales.html">Tutoriales</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="sobre-mi.html">sobre mi</a></li>
+            <li><a href="/uses.html">uses</a></li>
+        </ul>
+    </div>
+
+    <div class="menu-derecha">
+        <form class="redes-sociales">
+           
+            <li>
+                <a href="https://github.com/nahuelfigueredo" target="_blank">
+                    <img src="fotos/github.png" alt="GitHub de Nahuel">
                 </a>
-            </div>
-            <div class="menu-contenido">
-                <ul class="menu-fila-superior">
-                    <li><a href="proyectos.html">Proyectos</a></li>
-                    <li><a href="articulos.html">Artículos</a></li>
-                    <li><a href="tutoriales.html">Tutoriales</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-                <ul class="menu-fila-inferior">
-                    <li><a href="sobre-mi.html">Sobre Mí</a></li>
-                    <li><a href="uses.html">/uses</a></li>
-                    <li class="redes-sociales">    
-                        <a href="https://github.com/nahuelfigueredo" target="_blank">
-                            <img src="fotos/github.png" alt="GitHub de Nahuel">
-                        </a>
-                        <a href="https://linkedin.com/in/tu-usuario" target="_blank">
-                            <img src="fotos/social.png" alt="LinkedIn">
-                        </a>
-                        <a href="https://instagram.com/tu-usuario" target="_blank">
-                            <img src="fotos/instagram.png" alt="Instagram de Nahuel">
-                        </a>
-                        <a href="mailto:tu-correo@gmail.com" target="_blank">
-                            <img src="fotos/gmail.png" alt="Correo de Nahuel">
-                        </a>
-                        <a href="https://youtube.com/tu-usuario" target="_blank">
-                            <img src="fotos/youtube.png" alt="YouTube de Nahuel">
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+            </li>
+            <li>
+                <a href="https://linkedin.com/in/tu-usuario" target="_blank">
+                    <img src="fotos/social.png" alt="LinkedIn">
+                </a>
+            </li>
+            <li>
+                <a href="https://instagram.com/tu-usuario" target="_blank">
+                    <img src="fotos/instagram.png" alt="Instagram de Nahuel">
+                </a>
+            </li>
+            <li>
+                <a href="mailto:tu-correo@gmail.com" target="_blank">
+                    <img src="fotos/gmail.png" alt="Correo de Nahuel">
+                </a>
+            </li>
+            <li>
+                <a href="https://youtube.com/tu-usuario" target="_blank">
+                    <img src="fotos/youtube.png" alt="YouTube de Nahuel">
+                </a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
 
 
