--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li><a href="tutoriales.html">Tutoriales</a></li>
             <li><a href="contacto.html">Contacto</a></li>
             <li><a href="sobre-mi.html">sobre mi</a></li>
-            <li><a href="/uses.html">uses</a></li>
+            <li><a href="uses.html">uses</a></li>
         </ul>
     </div>
 
